Add association level selector

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
       <option value="F">Female</option>
     </select>
 
+    <label for="association">Association Level:</label>
+<select id="association" name="association">
+  <option value="0">Ruby (default)</option>
+  <option value="10">Sapphire (+$10)</option>
+  <option value="20">Emerald (+$20)</option>
+  <option value="30">Diamond (+$30)</option>
+  <option value="57">Executive Diamond (+$57)</option>
+</select>
+
+
     <button type="submit">Get Quote</button>
   </form>
 
