--- a/index.html
+++ b/index.html
@@ -10,8 +10,36 @@
   <h1>Premier Advantage Quote Calculator</h1>
 
   <form id="quote-form">
-    <label for="state">State:</label>
-    <input type="text" id="state" name="state" required />
+<label for="state">State:</label>
+<select id="state" name="state" required>
+  <option value="">--Select--</option>
+  <option value="FL">Florida</option>
+  <option value="GA">Georgia</option>
+  <option value="IN">Indiana</option>
+  <option value="KS">Kansas</option>
+  <option value="MI">Michigan</option>
+  <option value="MO">Missouri</option>
+  <option value="NC">North Carolina</option>
+  <option value="SC">South Carolina</option>
+  <option value="TN">Tennessee</option>
+  <option value="TX">Texas</option>
+  <option value="VA">Virginia</option>
+  <option value="NV">Nevada</option>
+  <option value="AL">Alabama</option>
+  <option value="AR">Arkansas</option>
+  <option value="IA">Iowa</option>
+  <option value="KY">Kentucky</option>
+  <option value="LA">Louisiana</option>
+  <option value="MS">Mississippi</option>
+  <option value="MT">Montana</option>
+  <option value="NE">Nebraska</option>
+  <option value="OK">Oklahoma</option>
+  <option value="UT">Utah</option>
+  <option value="WI">Wisconsin</option>
+  <option value="WV">West Virginia</option>
+  <option value="Wyoming">Wyoming</option>
+</select>
+
 
     <label for="age">Age:</label>
     <input type="number" id="age" name="age" required />
